// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Snapshot: Checked 1`] = `
<button
  aria-checked={true}
  aria-readonly={false}
  data-swarm-toggle="checked"
  disabled={false}
  role="checkbox"
  type="button"
>
  <span
    data-swarm-toggle-switch-disc={true}
  >
    <Icon
      shape="check"
    />
  </span>
</button>
`;

exports[`Toggle Snapshot: Default 1`] = `
<button
  aria-checked={false}
  aria-readonly={false}
  data-swarm-toggle="unchecked"
  disabled={false}
  role="checkbox"
  type="button"
>
  <span
    data-swarm-toggle-switch-disc={true}
  >
    <Icon
      shape="cross"
    />
  </span>
</button>
`;

exports[`Toggle Snapshot: Disabled 1`] = `
<button
  aria-checked={false}
  aria-readonly={true}
  data-swarm-toggle="unchecked"
  disabled={true}
  role="checkbox"
  type="button"
>
  <span
    data-swarm-toggle-switch-disc={true}
  >
    <Icon
      shape="cross"
    />
  </span>
</button>
`;

exports[`Toggle Snapshot: Disabled Checked 1`] = `
<button
  aria-checked={true}
  aria-readonly={true}
  data-swarm-toggle="checked"
  disabled={true}
  role="checkbox"
  type="button"
>
  <span
    data-swarm-toggle-switch-disc={true}
  >
    <Icon
      shape="check"
    />
  </span>
</button>
`;
